--- a/FireBaseDemo/InsuranceCompany.html
+++ b/FireBaseDemo/InsuranceCompany.html
@@ -86,7 +86,7 @@
     <link rel="stylesheet" href="src/css/insurance_company.css"></link>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script type="module" src="src/js/min_js/insurance_company.min.js"></script>
+    <script type="module" src="src/js/insurance_company.js"></script>
 </body>
 
 </html>
