--- a/FireBaseDemo/insuranceCompany_UserProfile.html
+++ b/FireBaseDemo/insuranceCompany_UserProfile.html
@@ -40,7 +40,7 @@
   <div class="container-fluid py-5" style="padding-bottom: 0px !important;">
     <div class="row" style="display: none;">
       <div class="col">
-       
+
       </div>
     </div>
 
@@ -48,8 +48,8 @@
       <div class="col-lg-4 leftColumn">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="src/img/user-286.png" referrerpolicy="no-referrer" alt="avatar"
-              class="rounded-circle img-fluid" style="width: 150px;">
+            <img src="src/img/user-286.png" referrerpolicy="no-referrer" alt="avatar" class="rounded-circle img-fluid"
+              style="width: 150px;">
             <h5 class="my-3 user_realName">查無資料</h5>
             <p class="text-muted mb-1">歡迎使用</p>
             <p class="text-muted mb-4">機車行車安全系統</p>
@@ -167,28 +167,10 @@
             </tr>
           </thead>
           <tbody class="journey-table-tbody">
-          
+
           </tbody>
         </table>
       </div>
-
-
-      <div class="container py-1">
-        <!-- Footer -->
-        <footer class="page-footer font-small">
-          <!-- Copyright -->
-          <div class="footer-copyright text-center py-3">© 2022 Copyright:
-            <a href="https://qi-xiang.github.io/">Qi Xiang</a>
-          </div>
-          <!-- Copyright -->
-        </footer>
-        <!-- Footer -->
-      </div>
-
-      <!-- Option 1: Bootstrap Bundle with Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 
 
       <div id="journey-modal" title="詳細行程資訊" style="display:none">
@@ -270,6 +252,81 @@
 
       </div>
 
+      <div class="container d-flex justify-content-center py-5">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link lastBtn">&laquo; 上10筆</a></li>
+            <li class="disabled" style="margin: 0 5px 0 5px;">
+              <div class="dropdown dropdownContainer">
+                <a class="page-link btn btn-secondary dropdown-toggle" role="button" data-toggle="dropdown"
+                  aria-expanded="false">
+                  平均速度
+                </a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" id="avg_speed_dropdown">平均速度</a>
+                  <a class="dropdown-item" id="avg_acceleration_dropdown">平均加速度</a>
+                  <a class="dropdown-item" id="avg_distance_dropdown">平均車距</a>
+                  <a class="dropdown-item" id="avg_speed_vio_count_dropdown">速度違規次數</a>
+                  <a class="dropdown-item" id="avg_acceleration_vio_count_dropdown">加速度違規次數</a>
+                  <a class="dropdown-item" id="avg_distance_vio_count_dropdown">車距違規次數</a>
+                  <a class="dropdown-item" id="safety_score_dropdown">安全分數</a>
+                </div>
+              </div>
+            <li class="page-item"><a class="page-link nextBtn">下10筆 &raquo;</a></li>
+          </ul>
+        </nav>
+      </div>
+
+
+      <div class="container d-flex justify-content-center" id="avg_speed_graph_dropdown" style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_acceleration_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_distance_graph_dropdown" style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_speed_vio_count_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_acceleration_vio_count_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_distance_vio_count_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="safety_score_graph_dropdown" style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container py-1">
+        <!-- Footer -->
+        <footer class="page-footer font-small">
+          <!-- Copyright -->
+          <div class="footer-copyright text-center py-3">© 2022 Copyright:
+            <a href="https://qi-xiang.github.io/">Qi Xiang</a>
+          </div>
+          <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+      </div>
+
+      <!-- Option 1: Bootstrap Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
       <!-- @link https://emojikopieren.de/ -->
       <!-- Add inside the flakes, whatever you like. -->
       <!--<snowfall>
@@ -298,25 +355,33 @@
       <!-- Loading square for squar.red network -->
       <div class="loader-wrapper">
         <p class="loader-txt">資料載入中...</p><br>
-        <p><span class="loader"><span class="loader-inner"></span></span></p>    
+        <p><span class="loader"><span class="loader-inner"></span></span></p>
       </div>
 
 
 </body>
 
+<link href="src/css/loader.css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"
   integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Load c3.css -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<!-- Load d3.js and c3.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
 <!--<link href="src/css/snowfall.css" rel="stylesheet" />-->
-<link href="src/css/loader.css" rel="stylesheet"/>
 <script type="module" src="src/js/min_js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
+<script type="module" src="src/js/dataVisualization.js"></script>
 
 </html>
