--- a/FireBaseDemo/user_profile.html
+++ b/FireBaseDemo/user_profile.html
@@ -15,7 +15,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" style="color:rgb(104, 104, 104) !important;">機車行車安全系統</a>
+    <a class="navbar-brand" style="color:rgb(104, 104, 104) !important;">機車行車安全系統</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,13 +23,13 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">首頁</a>
+          <a class="nav-link" style="color:rgb(104, 104, 104) !important;">首頁</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">公開統計數據</a>
+          <a class="nav-link" style="color:rgb(104, 104, 104) !important;">公開統計數據</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#" style="color:rgb(104, 104, 104) !important;">帳號登入</a>
+          <a class="nav-link" style="color:rgb(104, 104, 104) !important;">帳號登入</a>
         </li>
       </ul>
       <span class="navbar-text"> Under Development by Qi Xiang</span>
@@ -153,7 +153,10 @@
         </table>
       </div>
 
-      <div></div>
+      <div class="container-fluid">
+        
+        
+      </div>
 
       <div class="table-responsive" style="padding: 0 3% 0 3%;">
         <table id="table-demo" class="journey-table table table-hover table-borderless">
@@ -170,6 +173,63 @@
 
           </tbody>
         </table>
+      </div>
+
+      <div class="container d-flex justify-content-center py-5">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item"><a class="page-link lastBtn">&laquo; 上10筆</a></li>
+            <li class="disabled" style="margin: 0 5px 0 5px;">
+              <div class="dropdown dropdownContainer">
+                <a class="page-link btn btn-secondary dropdown-toggle" role="button" data-toggle="dropdown"
+                  aria-expanded="false">
+                  平均速度
+                </a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" id="avg_speed_dropdown">平均速度</a>
+                  <a class="dropdown-item" id="avg_acceleration_dropdown">平均加速度</a>
+                  <a class="dropdown-item" id="avg_distance_dropdown">平均車距</a>
+                  <a class="dropdown-item" id="avg_speed_vio_count_dropdown">速度違規次數</a>
+                  <a class="dropdown-item" id="avg_acceleration_vio_count_dropdown">加速度違規次數</a>
+                  <a class="dropdown-item" id="avg_distance_vio_count_dropdown">車距違規次數</a>
+                  <a class="dropdown-item" id="safety_score_dropdown">安全分數</a>
+                </div>
+              </div>
+            <li class="page-item"><a class="page-link nextBtn">下10筆 &raquo;</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_speed_graph_dropdown" style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_acceleration_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_distance_graph_dropdown" style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_speed_vio_count_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_acceleration_vio_count_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="avg_distance_vio_count_graph_dropdown"
+        style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
+      </div>
+
+      <div class="container d-flex justify-content-center" id="safety_score_graph_dropdown" style="overflow-x: auto;">
+        <div id="chart" style="width: 100%;"></div>
       </div>
 
 
@@ -298,7 +358,7 @@
       <!-- Loading square for squar.red network -->
       <div class="loader-wrapper">
         <p class="loader-txt">資料載入中...</p><br>
-        <p><span class="loader"><span class="loader-inner"></span></span></p>    
+        <p><span class="loader"><span class="loader-inner"></span></span></p>
       </div>
 
 
@@ -310,6 +370,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"
   integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Load c3.css -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<!-- Load d3.js and c3.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
@@ -318,7 +385,6 @@
 <script type="module" src="src/js/min_js/user_profile.min.js"></script>
 <link href="https://code.jquery.com/ui/1.13.1/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 <link href="src/css/user_profile.css" rel="stylesheet" />
-<script>
- 
-</script>
+<script type="module" src="src/js/dataVisualization.js"></script>
+
 </html>
